# LCSExtractor

./: CMakeLists.txt  README.md  algebra.cpp  algebra.h  configuration.conf  lcsGeometry.cpp  lcsGeometry.h  main.cpp  marchingCubesTable.h  utility.cpp  utility.h
